--- a/InstaCode/Base.lproj/Main.storyboard
+++ b/InstaCode/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                     <connections>
                         <outlet property="passwordField" destination="CPS-Gf-L2i" id="5Pv-Qn-ExY"/>
                         <outlet property="usernameField" destination="UTE-Xh-aS8" id="AQq-ie-m92"/>
-                        <segue destination="Sgj-HZ-V2F" kind="show" identifier="loginSegue" id="5T2-3Y-0JK"/>
+                        <segue destination="Y7f-ho-has" kind="show" identifier="loginSegue" id="5T2-3Y-0JK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -113,32 +113,178 @@
                                 <action selector="logOutButtonClicked:" destination="j0A-4y-vz5" id="c8T-kl-CjA"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="plus.app" catalog="system" style="plain" id="wBt-FP-zIM">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="2fN-Vy-pEB">
+                                <rect key="frame" x="369" y="17" width="25" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="plus.app" catalog="system"/>
+                                <connections>
+                                    <action selector="postButtonClicked:" destination="NsS-bU-k4q" eventType="touchUpInside" id="Sj8-Y4-f9q"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="abi-UB-jGs" kind="show" identifier="postSegue" id="4zp-EN-CLe"/>
+                    </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1611.5942028985507" y="71.651785714285708"/>
+            <point key="canvasLocation" x="2499" y="-404"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Oy9-Qc-0tM">
+        <!--Photo Map View Controller-->
+        <scene sceneID="MCI-6B-UP9">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Sgj-HZ-V2F" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PhotoMapViewController" id="abi-UB-jGs" customClass="PhotoMapViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="l5q-uV-gZ5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.viewfinder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="X4e-pZ-jKx">
+                                <rect key="frame" x="20" y="20.5" width="120" height="118.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="7W6-04-YY1"/>
+                                    <constraint firstAttribute="width" constant="120" id="t3l-ej-6sf"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EgO-w3-dZ0">
+                                <rect key="frame" x="148" y="20" width="64" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KME-Fo-GeR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kMa-bV-w2c">
+                                <rect key="frame" x="148" y="49" width="246" height="259"/>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vcg-tq-qOZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vcg-tq-qOZ" firstAttribute="bottom" secondItem="kMa-bV-w2c" secondAttribute="bottom" constant="500" id="0dh-eT-ri8"/>
+                            <constraint firstItem="kMa-bV-w2c" firstAttribute="leading" secondItem="EgO-w3-dZ0" secondAttribute="leading" id="3cT-5O-3f6"/>
+                            <constraint firstItem="kMa-bV-w2c" firstAttribute="top" secondItem="EgO-w3-dZ0" secondAttribute="bottom" constant="8" id="GLG-at-jhq"/>
+                            <constraint firstItem="EgO-w3-dZ0" firstAttribute="leading" secondItem="X4e-pZ-jKx" secondAttribute="trailing" constant="8" id="Woa-pP-JBi"/>
+                            <constraint firstItem="vcg-tq-qOZ" firstAttribute="trailing" secondItem="kMa-bV-w2c" secondAttribute="trailing" constant="20" id="Xgf-Gv-WM0"/>
+                            <constraint firstItem="X4e-pZ-jKx" firstAttribute="leading" secondItem="vcg-tq-qOZ" secondAttribute="leading" constant="20" id="eOZ-Gc-aSN"/>
+                            <constraint firstItem="EgO-w3-dZ0" firstAttribute="top" secondItem="X4e-pZ-jKx" secondAttribute="top" id="eig-WI-oOO"/>
+                            <constraint firstItem="X4e-pZ-jKx" firstAttribute="top" secondItem="vcg-tq-qOZ" secondAttribute="top" constant="20" id="jRn-Fj-Kji"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Rt0-Tr-U0Z">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="D9A-cZ-507">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Xt2-Iq-S97">
+                                <rect key="frame" x="302" y="13" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Post"/>
+                                <connections>
+                                    <action selector="postButtonClicked:" destination="abi-UB-jGs" eventType="touchUpInside" id="qJh-do-bJl"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="captionTextView" destination="kMa-bV-w2c" id="Q6S-sz-jPi"/>
+                        <outlet property="imageView" destination="X4e-pZ-jKx" id="QJJ-GG-zGS"/>
+                        <segue destination="NsS-bU-k4q" kind="show" identifier="feedSegue" id="WaX-rv-qDj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xRl-F9-xZ5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3358" y="-494"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9DH-ry-rUK">
+            <objects>
+                <viewController id="Qc1-Dn-PcY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jTO-pS-DZN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="oer-sK-7PA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="UHP-4h-wxu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vJH-8h-LzS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2500" y="261"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="4OR-Fi-5D6">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y09-0n-ww9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tabBarController storyboardIdentifier="AuthenticatedViewController" automaticallyAdjustsScrollViewInsets="NO" id="Y7f-ho-has" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="DcX-U3-VVg"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="phe-0a-giH">
+                    <navigationItem key="navigationItem" id="8lk-91-syd"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wdP-W0-bY8">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="51Z-K4-Wkb" kind="relationship" relationship="viewControllers" id="oly-OF-Vrl"/>
+                        <segue destination="faY-DF-c63" kind="relationship" relationship="viewControllers" id="SFd-D3-Ap7"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="843" y="-26"/>
+        </scene>
+        <!--Profle-->
+        <scene sceneID="bJp-9T-tWI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="faY-DF-c63" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profle" id="KoV-sM-eS8"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="zQe-Gu-2BS"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FfD-VN-dPn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="NsS-bU-k4q" kind="relationship" relationship="rootViewController" id="G5V-ne-o3b"/>
+                        <segue destination="Qc1-Dn-PcY" kind="relationship" relationship="rootViewController" id="cIq-Y6-oYL"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="twO-pF-zzo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6xg-oD-2RW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="818.84057971014499" y="71.651785714285708"/>
+            <point key="canvasLocation" x="1729" y="261"/>
+        </scene>
+        <!--Main Feed-->
+        <scene sceneID="EcR-7y-bfP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="51Z-K4-Wkb" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Main Feed" id="egg-i4-fpd"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6U0-UO-pT7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="NsS-bU-k4q" kind="relationship" relationship="rootViewController" id="LGk-Ng-3Hg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NOU-BE-cQ9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1729" y="-404"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="WaX-rv-qDj"/>
+    </inferredMetricsTieBreakers>
     <resources>
+        <image name="camera.viewfinder" catalog="system" width="128" height="115"/>
+        <image name="plus.app" catalog="system" width="128" height="114"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
